--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<div class="header">
+        <a href="#default" class="logo">CompanyLogo</a>
+        <div class="header-right">
+          <a class="#home" href="#home">Home</a>
+          <a href="#secret">Secret</a>
+          <a href="active">About</a>
+        </div>
+      </div>
